--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8" />
   <title>Quantum Ego™</title>
 
-  <!-- Orbitron Font -->
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
 
   <style>
     body {
       margin: 0;
-      background: radial-gradient(circle, #000010, #000000);
       font-family: 'Orbitron', sans-serif;
       color: white;
+      background: linear-gradient(to bottom, #050c1a, #000000);
       text-align: center;
-      padding: 30px;
+      padding: 30px 20px;
     }
 
     h1 {
@@ -25,19 +25,30 @@
 
     .subhead {
       font-size: 1.2rem;
-      color: #bbbbbb;
-      max-width: 750px;
-      margin: auto;
-      margin-bottom: 3em;
+      color: #cccccc;
+      max-width: 800px;
+      margin: 0 auto 2.5em;
     }
 
     .video-container {
       width: 100%;
-      max-width: 720px;
+      max-width: 700px;
       margin: 0 auto 40px auto;
-      border-radius: 20px;
+      border-radius: 18px;
       overflow: hidden;
-      box-shadow: 0 0 25px #00ffff44;
+      box-shadow: 0 0 20px #00ffff44;
+    }
+
+    iframe {
+      border: none;
+      width: 100%;
+      height: 400px;
+    }
+
+    .section-title {
+      font-size: 2rem;
+      color: #00e6e6;
+      margin: 40px 0 15px 0;
     }
 
     .avatar-grid {
@@ -45,13 +56,15 @@
       justify-content: center;
       flex-wrap: wrap;
       gap: 20px;
-      margin-bottom: 60px;
+      margin-bottom: 40px;
     }
 
     .avatar {
-      width: 180px;
+      width: 160px;
+      height: 160px;
       border-radius: 20px;
-      box-shadow: 0 0 15px #00f0ff66;
+      object-fit: cover;
+      box-shadow: 0 0 12px #00f0ff66;
       transition: transform 0.3s;
     }
 
@@ -60,24 +73,41 @@
       box-shadow: 0 0 20px #00ffff;
     }
 
-    .section-title {
-      font-size: 2rem;
-      color: #00e6e6;
-      margin: 60px 0 10px 0;
+    .packages {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+      margin-top: 50px;
+    }
+
+    .package {
+      background: #0c1624;
+      border: 1px solid #00ffff44;
+      border-radius: 16px;
+      padding: 25px;
+      width: 250px;
+      box-shadow: 0 0 12px #00ffff22;
+    }
+
+    .package h3 {
+      color: #00ffff;
+      margin-bottom: 10px;
+    }
+
+    .package p {
+      color: #cccccc;
+      font-size: 0.95rem;
     }
 
     .paypal-section {
-      margin-top: 50px;
+      margin-top: 60px;
     }
 
     .footer {
       margin-top: 60px;
       color: #666;
-      font-size: 0.9rem;
-    }
-
-    a {
-      color: #00ffff;
+      font-size: 0.85rem;
     }
   </style>
 </head>
@@ -85,43 +115,48 @@
 
   <h1>Quantum Ego™</h1>
   <div class="subhead">
-    Quantum Ego™ is your gateway to personalized AI evolution.  
-    Build, train, and interact with your own ultra-intelligent assistant — designed to enhance your life, business, creativity, and beyond.
+    Quantum Ego™ is a revolutionary portal where you create and own personalized AI beings to assist with productivity, healing, spiritual guidance, marketing, research, or even companionship. Your private Oracle, always evolving with you.
   </div>
 
-  <!-- Welcome Video Section -->
+  <!-- Welcome Video Section (AI Avatar Video Embed - no YouTube branding) -->
   <div class="video-container">
-    <iframe width="100%" height="405" src="https://www.youtube.com/embed/DJ-AliensTalk" 
-    title="Quantum Ego AI Welcome" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/DJ-AliensTalk?autoplay=1&mute=1&controls=0&showinfo=0&rel=0&modestbranding=1" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
 
-  <!-- Create / Choose AI Section -->
   <div class="section-title">Create. Choose. Own.</div>
   <div class="subhead">
-    Each AI assistant is unique — shaped by your goals and desires. Whether for productivity, coaching, healing, creativity, or strategy…  
-    your Quantum Ego becomes your private Oracle, always evolving with you.
+    Select your Quantum Ego below. Each represents a unique AI persona you can unlock, train, and command.
   </div>
 
-  <!-- Human AI Avatars -->
   <div class="avatar-grid">
-    <img class="avatar" src="https://i.imgur.com/lm8s41I.jpg" alt="AI 1">
-    <img class="avatar" src="https://i.imgur.com/9WYkKth.jpg" alt="AI 2">
-    <img class="avatar" src="https://i.imgur.com/lso59vV.jpg" alt="AI 3">
-    <img class="avatar" src="https://i.imgur.com/z0OeToH.jpg" alt="AI 4">
+    <img class="avatar" src="https://i.imgur.com/lm8s41I.jpg" alt="AI Avatar 1">
+    <img class="avatar" src="https://i.imgur.com/9WYkKth.jpg" alt="AI Avatar 2">
+    <img class="avatar" src="https://i.imgur.com/lso59vV.jpg" alt="AI Avatar 3">
+    <img class="avatar" src="https://i.imgur.com/z0OeToH.jpg" alt="AI Avatar 4">
+  </div>
+
+  <div class="section-title">Packages</div>
+  <div class="packages">
+    <div class="package">
+      <h3>✨ BASIC</h3>
+      <p>Access one AI Oracle, text-only interaction, starter-level insight and Q&A tools.</p>
+    </div>
+    <div class="package">
+      <h3>🔮 PRO</h3>
+      <p>Choose 3 avatars, unlock personality modes, voice replies, and deeper intelligence layers.</p>
+    </div>
+    <div class="package">
+      <h3>🧠 ORACLE+</h3>
+      <p>Unlimited AI commands, voice+video, private vault access, custom trained intelligence, and future upgrades.</p>
+    </div>
   </div>
 
   <!-- PayPal Button Section -->
   <div class="paypal-section">
-    <h2>Activate Your Quantum Ego</h2>
-    <p>Pay any amount. Begin your transformation.</p>
-
-    <!-- PayPal Button Container -->
+    <h2>Activate Your AI</h2>
+    <p>Start your evolution. Pay any amount to begin.</p>
     <div id="paypal-container-9UBET3GUC4AJU"></div>
-
-    <!-- PayPal SDK Script -->
     <script src="https://www.paypal.com/sdk/js?client-id=BAAw9XjJTdFGwSUCa3dkveerg5RU0cD2p0NuUNJHC9hbJAtQCwXqUPvzNfrTE0FgmNVxWVAP3R6wqf6bXE&components=hosted-buttons&disable-funding=venmo&currency=USD"></script>
-
-    <!-- PayPal Button Render -->
     <script>
       paypal.HostedButtons({
         hostedButtonId: "9UBET3GUC4AJU"
@@ -130,7 +165,7 @@
   </div>
 
   <div class="footer">
-    Quantum Ego™ by <a href="#">CashMind X</a> | All rights reserved © 2025
+    Quantum Ego™ by CashMind X | All rights reserved © 2025
   </div>
 
 </body>
