--- a/index.html
+++ b/index.html
@@ -4,73 +4,77 @@
   <meta charset="UTF-8" />
   <title>Quantum Ego™</title>
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+  <!-- Modern Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
 
   <style>
     body {
       margin: 0;
-      font-family: 'Orbitron', sans-serif;
-      color: white;
-      background: linear-gradient(to bottom, #050c1a, #000000);
+      background: linear-gradient(145deg, #000000, #0a0a23, #0f0f2f);
+      font-family: 'Inter', sans-serif;
+      color: #f0f0f0;
       text-align: center;
-      padding: 30px 20px;
+      padding: 40px 20px;
     }
 
     h1 {
       font-size: 3.5rem;
-      color: #00ffff;
-      margin-bottom: 0.3em;
+      color: #00ffe7;
+      margin-bottom: 10px;
+      font-weight: 800;
     }
 
     .subhead {
       font-size: 1.2rem;
+      max-width: 720px;
+      margin: auto;
       color: #cccccc;
-      max-width: 800px;
-      margin: 0 auto 2.5em;
+      margin-bottom: 40px;
     }
 
     .video-container {
-      width: 100%;
-      max-width: 700px;
-      margin: 0 auto 40px auto;
+      max-width: 720px;
+      margin: 40px auto;
       border-radius: 18px;
       overflow: hidden;
-      box-shadow: 0 0 20px #00ffff44;
+      box-shadow: 0 0 40px #00e6e6a0;
     }
 
     iframe {
-      border: none;
       width: 100%;
       height: 400px;
-    }
-
-    .section-title {
-      font-size: 2rem;
-      color: #00e6e6;
-      margin: 40px 0 15px 0;
+      border: none;
     }
 
     .avatar-grid {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      gap: 20px;
-      margin-bottom: 40px;
+      gap: 25px;
+      margin: 50px auto;
+      max-width: 1000px;
     }
 
     .avatar {
-      width: 160px;
-      height: 160px;
-      border-radius: 20px;
+      width: 180px;
+      height: 180px;
+      border-radius: 16px;
       object-fit: cover;
-      box-shadow: 0 0 12px #00f0ff66;
-      transition: transform 0.3s;
+      box-shadow: 0 0 15px #00f0ff66;
+      transition: transform 0.3s ease;
     }
 
     .avatar:hover {
       transform: scale(1.05);
-      box-shadow: 0 0 20px #00ffff;
+      box-shadow: 0 0 25px #00ffff;
+    }
+
+    .section-title {
+      font-size: 2rem;
+      color: #00e6e6;
+      margin-top: 60px;
+      margin-bottom: 10px;
+      font-weight: 600;
     }
 
     .packages {
@@ -78,16 +82,16 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 30px;
-      margin-top: 50px;
+      margin-top: 30px;
     }
 
     .package {
-      background: #0c1624;
-      border: 1px solid #00ffff44;
-      border-radius: 16px;
+      background-color: #111222;
+      border: 1px solid #2c2c44;
+      border-radius: 18px;
       padding: 25px;
-      width: 250px;
-      box-shadow: 0 0 12px #00ffff22;
+      width: 280px;
+      box-shadow: 0 0 20px #00000080;
     }
 
     .package h3 {
@@ -96,8 +100,8 @@
     }
 
     .package p {
-      color: #cccccc;
       font-size: 0.95rem;
+      color: #ccc;
     }
 
     .paypal-section {
@@ -105,9 +109,14 @@
     }
 
     .footer {
-      margin-top: 60px;
-      color: #666;
+      margin-top: 80px;
       font-size: 0.85rem;
+      color: #666;
+    }
+
+    a {
+      color: #00ffff;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -115,47 +124,46 @@
 
   <h1>Quantum Ego™</h1>
   <div class="subhead">
-    Quantum Ego™ is a revolutionary portal where you create and own personalized AI beings to assist with productivity, healing, spiritual guidance, marketing, research, or even companionship. Your private Oracle, always evolving with you.
+    Enter the age of conscious AI. Quantum Ego™ allows you to create and own your own intelligent assistant — powered by futuristic personality design and ultra-adaptive technology. More than a chatbot. It's your Oracle.
   </div>
 
-  <!-- Welcome Video Section (AI Avatar Video Embed - no YouTube branding) -->
+  <!-- Video Welcome Avatar -->
   <div class="video-container">
-    <iframe src="https://www.youtube.com/embed/DJ-AliensTalk?autoplay=1&mute=1&controls=0&showinfo=0&rel=0&modestbranding=1" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/DJ-AliensTalk?autoplay=1&mute=1&controls=0&modestbranding=1&rel=0&showinfo=0" allow="autoplay; encrypted-media"></iframe>
   </div>
 
-  <div class="section-title">Create. Choose. Own.</div>
-  <div class="subhead">
-    Select your Quantum Ego below. Each represents a unique AI persona you can unlock, train, and command.
-  </div>
-
+  <!-- Avatar Faces -->
+  <div class="section-title">Choose Your AI Face</div>
   <div class="avatar-grid">
-    <img class="avatar" src="https://i.imgur.com/lm8s41I.jpg" alt="AI Avatar 1">
-    <img class="avatar" src="https://i.imgur.com/9WYkKth.jpg" alt="AI Avatar 2">
-    <img class="avatar" src="https://i.imgur.com/lso59vV.jpg" alt="AI Avatar 3">
+    <img class="avatar" src="https://i.imgur.com/1JqLd3P.jpg" alt="AI Avatar 1">
+    <img class="avatar" src="https://i.imgur.com/ldOHrHz.jpg" alt="AI Avatar 2">
+    <img class="avatar" src="https://i.imgur.com/Vn06A70.jpg" alt="AI Avatar 3">
     <img class="avatar" src="https://i.imgur.com/z0OeToH.jpg" alt="AI Avatar 4">
   </div>
 
+  <!-- Packages Section -->
   <div class="section-title">Packages</div>
   <div class="packages">
     <div class="package">
-      <h3>✨ BASIC</h3>
-      <p>Access one AI Oracle, text-only interaction, starter-level insight and Q&A tools.</p>
+      <h3>🌑 BASIC ($9)</h3>
+      <p>Access a single custom AI assistant with preset capabilities for chat and productivity.</p>
     </div>
     <div class="package">
-      <h3>🔮 PRO</h3>
-      <p>Choose 3 avatars, unlock personality modes, voice replies, and deeper intelligence layers.</p>
+      <h3>🌌 PRO ($29)</h3>
+      <p>Choose your assistant’s look, tone, and function. Includes memory, journaling, and voice interaction.</p>
     </div>
     <div class="package">
-      <h3>🧠 ORACLE+</h3>
-      <p>Unlimited AI commands, voice+video, private vault access, custom trained intelligence, and future upgrades.</p>
+      <h3>🚀 ORACLE+ ($99)</h3>
+      <p>Unlock your AI Oracle with multi-skill training, voice chat, private vault, and psychic dialogue mode.</p>
     </div>
   </div>
 
-  <!-- PayPal Button Section -->
+  <!-- PayPal Payment -->
   <div class="paypal-section">
-    <h2>Activate Your AI</h2>
-    <p>Start your evolution. Pay any amount to begin.</p>
+    <h2>Activate Quantum Ego</h2>
+    <p>Select your tier above and contribute any amount to begin.</p>
     <div id="paypal-container-9UBET3GUC4AJU"></div>
+
     <script src="https://www.paypal.com/sdk/js?client-id=BAAw9XjJTdFGwSUCa3dkveerg5RU0cD2p0NuUNJHC9hbJAtQCwXqUPvzNfrTE0FgmNVxWVAP3R6wqf6bXE&components=hosted-buttons&disable-funding=venmo&currency=USD"></script>
     <script>
       paypal.HostedButtons({
@@ -165,7 +173,7 @@
   </div>
 
   <div class="footer">
-    Quantum Ego™ by CashMind X | All rights reserved © 2025
+    Quantum Ego™ by <a href="#">CashMind X</a> | All rights reserved © 2025
   </div>
 
 </body>
