--- a/index.html
+++ b/index.html
@@ -2,159 +2,163 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quantum Ego™</title>
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
     body {
       margin: 0;
-      font-family: 'Orbitron', sans-serif;
-      color: white;
-      background: linear-gradient(to bottom, #050c1a, #000000);
-      text-align: center;
+      font-family: 'Inter', sans-serif;
+      color: #f2f2f2;
+      background: linear-gradient(to bottom, #000000, #0a0a0a);
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      background-size: cover;
       padding: 30px 20px;
+      text-align: center;
     }
-
     h1 {
-      font-size: 3.5rem;
-      color: #00ffff;
-      margin-bottom: 0.3em;
+      font-size: 3rem;
+      color: #00ffe7;
+      font-weight: 700;
     }
-
     .subhead {
       font-size: 1.2rem;
+      max-width: 720px;
+      margin: 0 auto 30px;
       color: #cccccc;
-      max-width: 800px;
-      margin: 0 auto 2.5em;
     }
-
+    .get-started {
+      background: #00ffe7;
+      color: #000;
+      padding: 12px 24px;
+      font-weight: bold;
+      font-size: 1rem;
+      border-radius: 8px;
+      text-decoration: none;
+      margin-top: 20px;
+      display: inline-block;
+    }
     .video-container {
-      width: 100%;
-      max-width: 700px;
-      margin: 0 auto 40px auto;
-      border-radius: 18px;
+      max-width: 720px;
+      margin: 40px auto;
       overflow: hidden;
-      box-shadow: 0 0 20px #00ffff44;
+      border-radius: 12px;
+      box-shadow: 0 0 25px #00f2ff60;
     }
-
     iframe {
-      border: none;
       width: 100%;
       height: 400px;
+      border: none;
     }
-
     .section-title {
+      margin-top: 60px;
       font-size: 2rem;
+      font-weight: 600;
       color: #00e6e6;
-      margin: 40px 0 15px 0;
     }
-
     .avatar-grid {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
       gap: 20px;
-      margin-bottom: 40px;
+      margin-top: 30px;
     }
-
     .avatar {
       width: 160px;
       height: 160px;
-      border-radius: 20px;
+      border-radius: 14px;
+      box-shadow: 0 0 12px #00ffff55;
       object-fit: cover;
-      box-shadow: 0 0 12px #00f0ff66;
-      transition: transform 0.3s;
+      transition: 0.3s;
     }
-
     .avatar:hover {
       transform: scale(1.05);
-      box-shadow: 0 0 20px #00ffff;
+      box-shadow: 0 0 22px #00ffffaa;
     }
-
     .packages {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 30px;
-      margin-top: 50px;
+      margin-top: 40px;
     }
-
     .package {
-      background: #0c1624;
-      border: 1px solid #00ffff44;
-      border-radius: 16px;
-      padding: 25px;
-      width: 250px;
-      box-shadow: 0 0 12px #00ffff22;
+      background: rgba(0, 0, 0, 0.75);
+      padding: 20px;
+      border-radius: 14px;
+      width: 260px;
+      box-shadow: 0 0 15px #00ffff22;
+      text-align: left;
     }
-
     .package h3 {
       color: #00ffff;
       margin-bottom: 10px;
+      font-size: 1.2rem;
     }
-
     .package p {
-      color: #cccccc;
       font-size: 0.95rem;
+      color: #ccc;
     }
-
     .paypal-section {
       margin-top: 60px;
     }
-
     .footer {
-      margin-top: 60px;
-      color: #666;
-      font-size: 0.85rem;
+      margin-top: 80px;
+      font-size: 0.9rem;
+      color: #888;
+    }
+    a {
+      color: #00ffff;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
-
   <h1>Quantum Ego™</h1>
   <div class="subhead">
-    Quantum Ego™ is a revolutionary portal where you create and own personalized AI beings to assist with productivity, healing, spiritual guidance, marketing, research, or even companionship. Your private Oracle, always evolving with you.
+    Step into a new era of personalized intelligence. Design, own, and evolve with your own human-like AI for growth, power, and transformation.
   </div>
+  <a class="get-started" href="#packages">Get Started</a>
 
-  <!-- Welcome Video Section (AI Avatar Video Embed - no YouTube branding) -->
   <div class="video-container">
-    <iframe src="https://www.youtube.com/embed/DJ-AliensTalk?autoplay=1&mute=1&controls=0&showinfo=0&rel=0&modestbranding=1" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/DJ-AliensTalk?autoplay=1&mute=1&controls=0&modestbranding=1&rel=0" allow="autoplay; encrypted-media"></iframe>
   </div>
 
-  <div class="section-title">Create. Choose. Own.</div>
-  <div class="subhead">
-    Select your Quantum Ego below. Each represents a unique AI persona you can unlock, train, and command.
-  </div>
-
+  <div class="section-title">Meet Your AI Avatars</div>
   <div class="avatar-grid">
-    <img class="avatar" src="https://i.imgur.com/lm8s41I.jpg" alt="AI Avatar 1">
-    <img class="avatar" src="https://i.imgur.com/9WYkKth.jpg" alt="AI Avatar 2">
-    <img class="avatar" src="https://i.imgur.com/lso59vV.jpg" alt="AI Avatar 3">
-    <img class="avatar" src="https://i.imgur.com/z0OeToH.jpg" alt="AI Avatar 4">
+    <img class="avatar" src="https://thispersondoesnotexist.com/image" alt="AI Avatar 1">
+    <img class="avatar" src="https://thispersondoesnotexist.com/image" alt="AI Avatar 2">
+    <img class="avatar" src="https://thispersondoesnotexist.com/image" alt="AI Avatar 3">
+    <img class="avatar" src="https://thispersondoesnotexist.com/image" alt="AI Avatar 4">
   </div>
 
-  <div class="section-title">Packages</div>
+  <div class="section-title" id="packages">Choose Your Access</div>
   <div class="packages">
     <div class="package">
-      <h3>✨ BASIC</h3>
-      <p>Access one AI Oracle, text-only interaction, starter-level insight and Q&A tools.</p>
+      <h3>🧪 FREE TRIAL</h3>
+      <p>Try a preset AI assistant for 10 minutes.<br>• Text only<br>• No memory<br>• No voice</p>
     </div>
     <div class="package">
-      <h3>🔮 PRO</h3>
-      <p>Choose 3 avatars, unlock personality modes, voice replies, and deeper intelligence layers.</p>
+      <h3>🌑 BASIC – $9 (One-time)</h3>
+      <p>Includes 1 AI assistant<br>• Light memory<br>• Text chat<br>• Starter tools</p>
     </div>
     <div class="package">
-      <h3>🧠 ORACLE+</h3>
-      <p>Unlimited AI commands, voice+video, private vault access, custom trained intelligence, and future upgrades.</p>
+      <h3>🌌 PRO – $29/month</h3>
+      <p>Up to 3 AIs<br>• Voice interaction<br>• Mood shifts<br>• Journaling tools</p>
+    </div>
+    <div class="package">
+      <h3>🚀 ORACLE+ – $99/month</h3>
+      <p>Unlimited AIs<br>• Private vault access<br>• Psychic dialogue mode<br>• Visual + audio output</p>
     </div>
   </div>
 
-  <!-- PayPal Button Section -->
   <div class="paypal-section">
-    <h2>Activate Your AI</h2>
-    <p>Start your evolution. Pay any amount to begin.</p>
+    <h2>Activate Quantum Ego</h2>
+    <p>Choose a plan or start free. Your evolution begins here.</p>
     <div id="paypal-container-9UBET3GUC4AJU"></div>
     <script src="https://www.paypal.com/sdk/js?client-id=BAAw9XjJTdFGwSUCa3dkveerg5RU0cD2p0NuUNJHC9hbJAtQCwXqUPvzNfrTE0FgmNVxWVAP3R6wqf6bXE&components=hosted-buttons&disable-funding=venmo&currency=USD"></script>
     <script>
@@ -165,8 +169,7 @@
   </div>
 
   <div class="footer">
-    Quantum Ego™ by CashMind X | All rights reserved © 2025
+    Quantum Ego™ by <a href="#">CashMind X</a> | All rights reserved © 2025
   </div>
-
 </body>
 </html>
